# SpectralNet

./: CHANGELOG.md  README.md  pixi.toml  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  release.yml
examples/: KBC_RUN.md  cluster_kbc.py  data.py  predict_kbc.py
src/spectralnet/: _cluster.py  _metrics.py  _reduction.py  _utils.py
src/spectralnet/_models/: _spectralnet_model.py
src/spectralnet/_trainers/: _ae_trainer.py  _siamesenet_trainer.py  _spectralnet_trainer.py
src/tests/: conftest.py  test_losses.py  test_metrics.py  test_models.py  test_spectralnet.py  test_utils.py
