[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
# python-semantic-release configuration
# Commit-type → version bump mapping (Conventional Commits):
#   fix:              patch  (0.1.2 → 0.1.3)
#   feat:             minor  (0.1.2 → 0.2.0)
#   BREAKING CHANGE   major  (0.1.2 → 1.0.0)
#   (also triggered by feat!: / fix!: etc.)
# ---------------------------------------------------------------------------
[tool.semantic_release]
version_toml = []
version_variables = ["setup.cfg:version"]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "pip install build && python -m build"
dist_path = "dist/"
upload_to_pypi = false
upload_to_release = true
commit_parser = "angular"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "style", "test", "chore", "ci"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]